feat: Geração de arquivos PPTX em lote
